--- a/Project/app/src/main/res/layout/fragment_add_module.xml
+++ b/Project/app/src/main/res/layout/fragment_add_module.xml
@@ -33,7 +33,7 @@
             android:paddingBottom="5dp"/>
 
         <EditText
-            android:background="@drawable/common_box"
+            android:background="@drawable/background_common_box"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:id="@+id/txt_module_name"
@@ -72,7 +72,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/common_box"
+            android:background="@drawable/background_common_box"
             android:orientation="horizontal">
 
             <TextView
@@ -123,7 +123,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/common_box"
+            android:background="@drawable/background_common_box"
             android:orientation="horizontal">
 
             <TextView
@@ -173,7 +173,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/common_box"
+            android:background="@drawable/background_common_box"
             android:orientation="horizontal">
 
             <Spinner
@@ -231,7 +231,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/common_box"
+            android:background="@drawable/background_common_box"
             android:orientation="horizontal">
 
             <Spinner
@@ -289,7 +289,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/common_box"
+            android:background="@drawable/background_common_box"
             android:orientation="horizontal">
 
             <TextView
@@ -340,7 +340,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/common_box"
+            android:background="@drawable/background_common_box"
             android:orientation="horizontal">
 
             <TextView
