--- a/Project/app/src/main/res/layout/action_question.xml
+++ b/Project/app/src/main/res/layout/action_question.xml
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/common_box"
+            android:background="@drawable/background_common_box"
             android:orientation="horizontal"
             android:id="@+id/spinner_topic_box">
 
@@ -76,7 +76,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:background="@drawable/gray_common_box"
+            android:background="@drawable/background_gray_box"
             android:textSize="18sp"
             android:textStyle="bold"
             android:gravity="left|center_vertical"
@@ -87,7 +87,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="317dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingLeft="40dp"
         android:paddingRight="30dp">
@@ -104,11 +104,21 @@
             android:id="@+id/edt_question_content"
             android:layout_width="match_parent"
             android:layout_height="276dp"
-            android:background="@drawable/common_box"
+            android:background="@drawable/background_common_box"
             android:ems="100"
             android:gravity="start|top"
             android:inputType="textMultiLine"
             android:padding="10dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:text="Please enter the question"
+            android:textColor="@color/red"
+            android:id="@+id/warning_question_content"
+            android:visibility="gone"/>
 
     </LinearLayout>
 
