--- a/Project/app/src/main/res/layout/add_feedback.xml
+++ b/Project/app/src/main/res/layout/add_feedback.xml
@@ -47,7 +47,7 @@
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/common_box">
+                android:background="@drawable/background_common_box">
 
                 <Spinner
                     android:id="@+id/spn_feedback_type"
@@ -79,7 +79,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="4dp"
-            android:background="@drawable/common_box"/>
+            android:background="@drawable/background_common_box"/>
 
     </LinearLayout>
 
