--- a/Project/app/src/main/res/layout/app_bar_main.xml
+++ b/Project/app/src/main/res/layout/app_bar_main.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:src="@drawable/r2s_logo" />
+                android:src="@drawable/img_r2s_logo" />
 
         </androidx.appcompat.widget.Toolbar>
 
