--- a/Project/app/src/main/res/layout/do_feedback.xml
+++ b/Project/app/src/main/res/layout/do_feedback.xml
@@ -114,7 +114,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:background="@drawable/common_box">
+        android:background="@drawable/background_common_box">
 
         <EditText
             android:layout_width="match_parent"
