--- a/Project/app/src/main/res/layout/fragment_add_class.xml
+++ b/Project/app/src/main/res/layout/fragment_add_class.xml
@@ -33,7 +33,7 @@
             android:paddingBottom="5dp"/>
 
         <EditText
-            android:background="@drawable/common_box"
+            android:background="@drawable/background_common_box"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:id="@+id/txt_class_name"
@@ -68,7 +68,7 @@
             android:paddingBottom="5dp"/>
 
         <EditText
-            android:background="@drawable/common_box"
+            android:background="@drawable/background_common_box"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:paddingLeft="5dp"
@@ -105,7 +105,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/common_box"
+            android:background="@drawable/background_common_box"
             android:orientation="horizontal">
 
             <TextView
@@ -156,7 +156,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/common_box"
+            android:background="@drawable/background_common_box"
             android:orientation="horizontal">
 
             <TextView
