--- a/Project/app/src/main/res/layout/fragment_enrollment.xml
+++ b/Project/app/src/main/res/layout/fragment_enrollment.xml
@@ -61,7 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/common_box"
+            android:background="@drawable/background_common_box"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="40dp">
 
