--- a/Project/app/src/main/res/layout/fragment_question.xml
+++ b/Project/app/src/main/res/layout/fragment_question.xml
@@ -63,7 +63,7 @@
                 android:layout_weight="1"
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
-                android:background="@drawable/common_box"
+                android:background="@drawable/background_common_box"
                 android:orientation="horizontal">
 
                 <Spinner
