--- a/Project/app/src/main/res/layout/fragment_result.xml
+++ b/Project/app/src/main/res/layout/fragment_result.xml
@@ -31,7 +31,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:background="@drawable/common_box"
+                android:background="@drawable/background_common_box"
                 android:orientation="horizontal">
 
                 <Spinner
@@ -75,7 +75,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@drawable/common_box"
+                android:background="@drawable/background_common_box"
                 android:orientation="horizontal">
 
                 <Spinner
