--- a/Project/app/src/main/res/layout/item_enrollment.xml
+++ b/Project/app/src/main/res/layout/item_enrollment.xml
@@ -12,7 +12,7 @@
         android:layout_marginRight="35dp"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/item_format"
+        android:background="@drawable/background_item"
         android:orientation="vertical"
         android:paddingLeft="20dp"
         android:paddingTop="15dp"
@@ -112,9 +112,9 @@
             android:layout_height="48dp"
             android:layout_marginBottom="5dp"
             style="@style/Widget.MaterialComponents.Button.Icon"
-            app:icon="@drawable/ic_menu_camera"
-            app:iconSize="24dp"
-            app:iconPadding="0dp"
+            app:icon="@drawable/ic_view_icon"
+            app:iconSize="35dp"
+            android:paddingLeft="6.5dp"
             android:insetLeft="0dp"
             android:insetTop="0dp"
             android:insetRight="0dp"
@@ -127,9 +127,9 @@
             android:layout_height="48dp"
             android:layout_marginBottom="5dp"
             style="@style/Widget.MaterialComponents.Button.Icon"
-            app:icon="@drawable/ic_menu_camera"
-            app:iconSize="24dp"
-            app:iconPadding="0dp"
+            app:icon="@drawable/ic_edit_icon"
+            app:iconSize="40dp"
+            android:paddingLeft="5dp"
             android:insetLeft="0dp"
             android:insetTop="0dp"
             android:insetRight="0dp"
@@ -141,9 +141,9 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             style="@style/Widget.MaterialComponents.Button.Icon"
-            app:icon="@drawable/ic_menu_camera"
-            app:iconSize="24dp"
-            app:iconPadding="0dp"
+            app:icon="@drawable/ic_delete_icon"
+            app:iconSize="35dp"
+            android:paddingLeft="6.5dp"
             android:insetLeft="0dp"
             android:insetTop="0dp"
             android:insetRight="0dp"
