--- a/Project/app/src/main/res/layout/item_feedback.xml
+++ b/Project/app/src/main/res/layout/item_feedback.xml
@@ -13,7 +13,7 @@
         android:layout_marginRight="35dp"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/item_format"
+        android:background="@drawable/background_item"
         android:orientation="vertical"
         android:paddingLeft="20dp"
         android:paddingTop="15dp"
@@ -95,9 +95,9 @@
             android:id="@+id/btn_feedback_detail"
             android:layout_marginBottom="5dp"
             style="@style/Widget.MaterialComponents.Button.Icon"
-            app:icon="@drawable/ic_menu_camera"
-            app:iconSize="24dp"
-            app:iconPadding="0dp"
+            app:icon="@drawable/ic_view_icon"
+            app:iconSize="35dp"
+            android:paddingLeft="6.5dp"
             android:insetLeft="0dp"
             android:insetTop="0dp"
             android:insetRight="0dp"
@@ -111,9 +111,9 @@
             android:id="@+id/btn_edit_feedback"
             android:layout_marginBottom="5dp"
             style="@style/Widget.MaterialComponents.Button.Icon"
-            app:icon="@drawable/ic_menu_camera"
-            app:iconSize="24dp"
-            app:iconPadding="0dp"
+            app:icon="@drawable/ic_edit_icon"
+            app:iconSize="40dp"
+            android:paddingLeft="5dp"
             android:insetLeft="0dp"
             android:insetTop="0dp"
             android:insetRight="0dp"
@@ -126,9 +126,9 @@
             android:layout_height="48dp"
             android:id="@+id/btn_delete_feedback"
             style="@style/Widget.MaterialComponents.Button.Icon"
-            app:icon="@drawable/ic_menu_camera"
-            app:iconSize="24dp"
-            app:iconPadding="0dp"
+            app:icon="@drawable/ic_delete_icon"
+            app:iconSize="35dp"
+            android:paddingLeft="6.5dp"
             android:insetLeft="0dp"
             android:insetTop="0dp"
             android:insetRight="0dp"
