--- a/Project/app/src/main/res/layout/item_module.xml
+++ b/Project/app/src/main/res/layout/item_module.xml
@@ -10,7 +10,7 @@
         android:layout_marginLeft="25dp"
         android:layout_marginRight="35dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/item_format"
+        android:background="@drawable/background_item"
         android:orientation="vertical"
         android:paddingLeft="20dp"
         android:paddingTop="15dp"
@@ -180,9 +180,9 @@
             android:layout_height="48dp"
             android:layout_marginBottom="5dp"
             style="@style/Widget.MaterialComponents.Button.Icon"
-            app:icon="@drawable/ic_menu_camera"
-            app:iconSize="24dp"
-            app:iconPadding="0dp"
+            app:icon="@drawable/ic_edit_icon"
+            app:iconSize="40dp"
+            android:paddingLeft="5dp"
             android:insetLeft="0dp"
             android:insetTop="0dp"
             android:insetRight="0dp"
@@ -195,9 +195,9 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             style="@style/Widget.MaterialComponents.Button.Icon"
-            app:icon="@drawable/ic_menu_camera"
-            app:iconSize="24dp"
-            app:iconPadding="0dp"
+            app:icon="@drawable/ic_delete_icon"
+            app:iconSize="35dp"
+            android:paddingLeft="6.5dp"
             android:insetLeft="0dp"
             android:insetTop="0dp"
             android:insetRight="0dp"
