--- a/Project/app/src/main/res/layout/item_trainee.xml
+++ b/Project/app/src/main/res/layout/item_trainee.xml
@@ -10,7 +10,7 @@
         android:layout_marginLeft="25dp"
         android:layout_marginRight="35dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/item_format"
+        android:background="@drawable/background_item"
         android:orientation="vertical"
         android:paddingLeft="20dp"
         android:paddingTop="15dp"
