--- a/Project/app/src/main/res/layout/nav_header_main.xml
+++ b/Project/app/src/main/res/layout/nav_header_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/logo_menu_format"
+    android:background="@drawable/background_logo_menu"
     android:gravity="center"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -19,6 +19,6 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@drawable/r2s_logo"/>
+        app:srcCompat="@drawable/img_r2s_logo"/>
 
 </LinearLayout>
