--- a/Project/app/src/main/res/layout/review_feedback.xml
+++ b/Project/app/src/main/res/layout/review_feedback.xml
@@ -29,7 +29,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/review_content"
+        android:background="@drawable/background_review_content"
         android:orientation="vertical"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
