--- a/Project/app/src/main/res/layout/fragment_view_comment.xml
+++ b/Project/app/src/main/res/layout/fragment_view_comment.xml
@@ -10,19 +10,14 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:text="COMMENT RESULT"
         android:gravity="center"
         android:textSize="18sp"/>
 
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcvComment"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="5">
-
-
-
-    </LinearLayout>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
