--- a/Project/app/src/main/res/layout/item_enrollment.xml
+++ b/Project/app/src/main/res/layout/item_enrollment.xml
@@ -31,7 +31,7 @@
                 android:text="Trainee ID: " />
 
             <TextView
-                android:id="@+id/trainee_id"
+                android:id="@+id/txt_trainee_id"
                 style="@style/TextItemStyle"
                 android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
@@ -51,7 +51,7 @@
                 android:text="Trainee Name: " />
 
             <TextView
-                android:id="@+id/trainee_name"
+                android:id="@+id/txt_trainee_name"
                 style="@style/TextItemStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -70,7 +70,7 @@
                 android:text="Class ID: " />
 
             <TextView
-                android:id="@+id/class_id"
+                android:id="@+id/txt_class_id"
                 style="@style/TextItemStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -90,7 +90,7 @@
                 android:text="Class Name: " />
 
             <TextView
-                android:id="@+id/class_name"
+                android:id="@+id/txt_class_name"
                 style="@style/TextItemStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -118,12 +118,14 @@
             android:insetLeft="0dp"
             android:insetTop="0dp"
             android:insetRight="0dp"
+            android:id="@+id/btn_detail_enrollment"
             android:insetBottom="0dp"
             app:shapeAppearanceOverlay="@style/ButtonRounded"
             android:backgroundTint="@color/detail_button_color"/>
 
         <com.google.android.material.button.MaterialButton
             android:layout_width="48dp"
+            android:id="@+id/btn_edit_enrollment"
             android:layout_height="48dp"
             android:layout_marginBottom="5dp"
             style="@style/Widget.MaterialComponents.Button.Icon"
@@ -139,6 +141,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:layout_width="48dp"
+            android:id="@+id/btn_delete_enrollment"
             android:layout_height="48dp"
             style="@style/Widget.MaterialComponents.Button.Icon"
             app:icon="@drawable/ic_delete_icon"
