--- a/Project/app/src/main/res/layout/add_feedback.xml
+++ b/Project/app/src/main/res/layout/add_feedback.xml
@@ -23,7 +23,8 @@
                 android:text="Create New Feedback"
                 android:padding="20dp"
                 android:textSize="35sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
 
         </LinearLayout>
 
@@ -38,11 +39,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Feedback Type: "/>
+            android:text="Feedback Type: "
+            android:textColor="@color/black"/>
 
         <LinearLayout
             android:layout_width="90dp"
             android:layout_height="wrap_content">
+
             <RelativeLayout
 
                 android:layout_width="wrap_content"
@@ -61,18 +64,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_alignParentRight="true"
+                    android:paddingBottom="10dp"
                     android:src="@drawable/ic_baseline_arrow_drop_down_24" />
 
             </RelativeLayout>
         </LinearLayout>
 
-
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="2dp"
-            android:text="Feedback Title:"/>
+            android:text="Feedback Title:"
+            android:textColor="@color/black"/>
 
         <EditText
             android:id="@+id/feedback_title"
