--- a/Project/app/src/main/res/layout/item_topic_in_feeback.xml
+++ b/Project/app/src/main/res/layout/item_topic_in_feeback.xml
@@ -25,7 +25,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="Topic " />
+                android:text="Topic "
+                android:textColor="@color/black"/>
 
         </LinearLayout>
 
