--- a/Project/app/src/main/res/layout/fragment_do_feedback.xml
+++ b/Project/app/src/main/res/layout/fragment_do_feedback.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="5dp"
-    android:id="@+id/do_feedback">
+    tools:context=".fragment.DoFeedbackFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center">
-        
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
