--- a/Project/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Project/app/src/main/res/navigation/mobile_navigation.xml
@@ -165,7 +165,11 @@
         android:id="@+id/nav_trainee_home_fragment"
         android:name="com.gaf.project.fragment.TraineeHomeFragment"
         android:label="fragment_trainee_home"
-        tools:layout="@layout/fragment_trainee_home" />
+        tools:layout="@layout/fragment_trainee_home" >
+        <action
+            android:id="@+id/action_nav_trainee_home_fragment_to_doFeedbackFragment"
+            app:destination="@id/doFeedbackFragment" />
+    </fragment>
     <fragment
         android:id="@+id/detailClassFragment"
         android:name="com.gaf.project.fragment.DetailClassFragment"
@@ -186,5 +190,10 @@
         android:name="com.gaf.project.fragment.DetailEnrollmentFragment"
         android:label="fragment_detail_enrollment"
         tools:layout="@layout/fragment_detail_enrollment" />
+    <fragment
+        android:id="@+id/doFeedbackFragment"
+        android:name="com.gaf.project.fragment.DoFeedbackFragment"
+        android:label="fragment_do_feedback"
+        tools:layout="@layout/fragment_do_feedback" />
 
 </navigation>
