--- a/Project/app/src/main/res/layout/fragment_do_feedback.xml
+++ b/Project/app/src/main/res/layout/fragment_do_feedback.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="false"
+    tools:context=".fragment.DoFeedbackFragment">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="5dp"
-    tools:context=".fragment.DoFeedbackFragment">
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:textSize="28sp"
+            android:textSize="20sp"
             android:text="TRAINING Module FEEDBACK"/>
     </LinearLayout>
 
@@ -29,31 +34,55 @@
         android:paddingTop="15dp"
         android:paddingBottom="15dp">
 
-
         <LinearLayout
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/module_name"
-                style="@style/TextViewStyle"
-                android:layout_width="wrap_content"
+            android:orientation="vertical"
+            android:layout_toStartOf="@+id/groupImage">
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Module: " />
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/class_name"
-                style="@style/TextViewStyle"
-                android:layout_width="wrap_content"
+                <TextView
+                    style="@style/TextViewStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Module: " />
+
+                <TextView
+                    android:id="@+id/txt_module_name"
+                    style="@style/TextItemStyle"
+                    android:layout_marginTop="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:text="Class: " />
+                android:orientation="horizontal">
 
+                <TextView
+                    style="@style/TextViewStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Class: " />
+
+                <TextView
+                    android:id="@+id/txt_class_name"
+                    style="@style/TextItemStyle"
+                    android:layout_marginTop="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/groupImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -118,16 +147,17 @@
         android:background="@drawable/background_common_box">
 
         <EditText
+            android:id="@+id/txt_comment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:hint="test"/>
+            android:layout_height="70dp"
+            android:hint="test" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:gravity="left">
 
         <TextView
@@ -145,8 +175,25 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/rcv_answer_in_feedback_trainee"
+            />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_submit"
+            android:text="SUBMIT">
+
+        </Button>
 
     </LinearLayout>
 
 </LinearLayout>
+</ScrollView>
