--- a/Project/app/src/main/res/layout/fragment_feed_back.xml
+++ b/Project/app/src/main/res/layout/fragment_feed_back.xml
@@ -31,10 +31,10 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:id="@+id/btn_add_feedback"
-                style="@style/Widget.MaterialComponents.Button.Icon"
                 app:icon="@drawable/ic_baseline_add_24"
-                app:iconSize="24dp"
+                app:iconSize="40dp"
                 app:iconPadding="0dp"
+                android:paddingLeft="4dp"
                 android:insetLeft="0dp"
                 android:insetTop="0dp"
                 android:insetRight="0dp"
