--- a/Project/app/src/main/res/layout/fragment_enrollment.xml
+++ b/Project/app/src/main/res/layout/fragment_enrollment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragment.FeedBackFragment">
+    tools:context=".fragment.EnrollmentFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,14 +25,15 @@
                 android:text="Enrollment List"
                 android:padding="20dp"
                 android:textSize="40sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
 
             <com.google.android.material.button.MaterialButton
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:id="@+id/btn_add_enrollment"
                 style="@style/Widget.MaterialComponents.Button.Icon"
-                app:icon="@drawable/ic_menu_camera"
+                app:icon="@drawable/ic_baseline_add_24"
                 app:iconSize="24dp"
                 app:iconPadding="0dp"
                 android:insetLeft="0dp"
@@ -56,9 +57,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="Class Name: "
+            android:textColor="@color/black"
             android:layout_gravity="center"/>
 
         <RelativeLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -71,7 +74,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:layout_centerVertical="true"
-                android:layout_gravity="center"
                 android:background="@android:color/transparent"
                 android:gravity="center"
                 android:layout_marginLeft="5dp"
@@ -80,21 +82,14 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 android:layout_alignParentRight="true"
+                android:layout_marginEnd="5dp"
                 android:layout_centerVertical="true">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_arrow_drop_up_24"
-                    android:layout_marginBottom="-6dp"/>
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_arrow_drop_down_24"
-                    android:layout_marginTop="-6dp"/>
+               <ImageView
+                   android:layout_width="24dp"
+                   android:layout_height="24dp"
+                   android:src="@drawable/arrow"/>
 
             </LinearLayout>
 
