--- a/Project/app/src/main/res/layout/fragment_pie_chart1.xml
+++ b/Project/app/src/main/res/layout/fragment_pie_chart1.xml
@@ -34,16 +34,6 @@
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/tvTest"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:text="Test"
-        android:textSize="30sp"
-        android:textColor="@color/search_box_border"
-        android:gravity="center"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -56,6 +46,7 @@
             android:layout_height="260dp"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layNote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
