--- a/Project/app/src/main/res/layout/fail_dialog.xml
+++ b/Project/app/src/main/res/layout/fail_dialog.xml
@@ -18,11 +18,13 @@
         android:id="@+id/txt_fail_dialog_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_gravity="center"
-        android:text="Fail"
-        android:textStyle="bold"
-        android:textSize="25sp"
-        />
+        android:gravity="center"
+        android:text="You already join this module, please try another!!!"
+        android:textColor="@color/black"
+        android:textSize="25sp" />
 
     <Button
         android:layout_width="wrap_content"
