--- a/Project/app/src/main/res/layout/fragment_enrollment.xml
+++ b/Project/app/src/main/res/layout/fragment_enrollment.xml
@@ -34,8 +34,9 @@
                 android:id="@+id/btn_add_enrollment"
                 style="@style/Widget.MaterialComponents.Button.Icon"
                 app:icon="@drawable/ic_baseline_add_24"
-                app:iconSize="24dp"
+                app:iconSize="40dp"
                 app:iconPadding="0dp"
+                android:paddingLeft="4dp"
                 android:insetLeft="0dp"
                 android:insetTop="0dp"
                 android:insetRight="0dp"
