--- a/Project/app/src/main/res/layout/item_topic_trainee_module_feedback.xml
+++ b/Project/app/src/main/res/layout/item_topic_trainee_module_feedback.xml
@@ -12,6 +12,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
             <TextView
@@ -21,12 +22,14 @@
                 android:layout_marginTop="5dp"
                 android:text="1"
                 android:textColor="@color/black"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text="."
                 android:textColor="@color/black"/>
+
             <TextView
                 android:id="@+id/topic_in_trainee_feedback"
                 android:layout_width="wrap_content"
@@ -34,6 +37,7 @@
                 android:layout_marginTop="5dp"
                 android:text="Training program &amp; content"
                 android:textColor="@color/black"/>
+
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
